@@ -29,6 +29,7 @@ GD login doesn't allows login by email if site is using SSL - FIXED
 Description word limit to zero in GD -> Design -> Listings doesn't hide listing description - FIXED
 Url custom field uses default value for link text if present - CHANGED
 Default image should not displayed on listing detail preview page - FIXED
+Changes to implement location import/export for multilocations - CHANGED
 
 v1.5.6
 In add listing form sub-categories are no longer showing in hierarchy for checkbox display type - FIXED
